[project]
name = "comfyui-testing"
description = "ComfyUI Testing custom nodes for Artify XYZ parameter sweeps and in-node HTML grid viewing."
version = "0.1.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/ArtifyGames/comfyui-testing.git"
# Used by Comfy Registry: https://comfyregistry.org

[tool.comfy]
PublisherId = "artifygames"
DisplayName = "ComfyUI-Testing"
Icon = ""
